[metadata]
name = setuptools-monorepo
version = v0.0.4
long_description_content_type = text/markdown
long_description = Run Python code from a monorepo during Python package installation
home_page = https://github.com/recogni/setuptools-monorepo

[options]
packages = find:
install_requires =
    tomli ~= 2.0.1; python_version < "3.11"

[options.entry_points]
distutils.setup_keywords =
    monorepo_call = monorepo_loader.setuptools_monorepo:handle_monorepo_keywords
setuptools.finalize_distribution_options =
    setuptools_monorepo = monorepo_loader.setuptools_monorepo:handle_monorepo_dist
